# Hyperbolic-Prompt-Detection-and-Sanitization

src/hype/: _weights.py  inference.py  pyproject.toml
src/hype/assets/: best_hyperbolic_svdd_model.pth
